footer alignment issue fixed

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -85,10 +85,10 @@
 }
 
 .decode-description {
-  font-family: "Press Start 2P", cursive;
-  /*font-family: 'Quantico', sans-serif;*/
+  font-family: 'Press Start 2P', cursive;
+  font-family: 'Quantico', sans-serif;
   text-align: center;
-  font-size: 13px;
+  font-size: 16px;
   color: #fff;
   text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 22px #44ece8, 0 0 30px #1daea9;
 }
@@ -178,6 +178,9 @@ h4 {
   .numberCount h4 {
     font-size: 1.1vw;
   }
+  .decode-logo{
+    width: 35%;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -185,7 +188,7 @@ h4 {
     font-size: 16px;
   }
   .decode-description{
-    font-size: 14px;
+    font-size: 16px;
   }
   .container-register a{
     font-size: 16px;
@@ -206,17 +209,10 @@ h4 {
   .numberCount h4 {
     font-size: 1.9vw;
   }
+  .decode-logo{
+    width: 35%;
+  }
 
-  /*.day,*/
-  /*.hour,*/
-  /*.minute,*/
-  /*.second {*/
-  /*  font-size: 4rem;*/
-
-  /*}*/
-  /*.numberCount h4 {*/
-  /*  font-size: 1rem;*/
-  /*}*/
 }
 
 @media (max-width: 950px) {
@@ -224,7 +220,7 @@ h4 {
     font-size: 15px;
   }
   .decode-description{
-    font-size: 13px;
+    font-size: 15px;
   }
   .container-register a{
     font-size: 15px;
@@ -245,18 +241,10 @@ h4 {
   .numberCount h4 {
     font-size: 2.1vw;
   }
-  /*.container-register a {*/
-  /*  font-size: 2.5rem;*/
-  /*}*/
-  /*.day,*/
-  /*.hour,*/
-  /*.minute,*/
-  /*.second {*/
-  /*  font-size: 3.5rem;*/
-  /*}*/
-  /*.numberCount h4 {*/
-  /*  font-size: 1rem;*/
-  /*}*/
+  .decode-logo{
+    width: 45%;
+  }
+
 }
 
 @media (max-width: 650px) {
@@ -264,7 +252,7 @@ h4 {
     font-size: 15px;
   }
   .decode-description{
-    font-size: 12px;
+    font-size: 15px;
   }
   .container-register a{
     font-size: 15px;
@@ -285,18 +273,10 @@ h4 {
   .numberCount h4 {
     font-size: 2.1vw;
   }
-  /*.container-register a {*/
-  /*  font-size: 2rem;*/
-  /*}*/
-  /*.day,*/
-  /*.hour,*/
-  /*.minute,*/
-  /*.second {*/
-  /*  font-size: 3rem;*/
-  /*}*/
-  /*.numberCount h4 {*/
-  /*  font-size: 1rem;*/
-  /*}*/
+  .decode-logo{
+    width: 60%;
+  }
+
 }
 
 @media (max-width: 480px) {
@@ -325,36 +305,12 @@ h4 {
   .numberCount h4 {
     font-size: 2.6vw;
   }
-  /*.container-register a {*/
-  /*  font-size: 1.5rem;*/
-  /*}*/
+  .decode-logo{
+    width: 60%;
+  }
 
-  /*.day,*/
-  /*.hour,*/
-  /*.minute,*/
-  /*.second {*/
-  /*  font-size: 2.5rem;*/
-  /*}*/
-  /*.numberCount h4 {*/
-  /*  font-size: 0.5rem;*/
-  /*}*/
 }
 
-/*register button css*/
-
-/*styling background*/
-/*body {*/
-/*  margin: 0;*/
-/*  padding: 0;*/
-/*  display: flex;*/
-/*  height: 100vh;*/
-/*  justify-content: center;*/
-/*  align-items: center;*/
-/*  background-color: #000;*/
-/*  font-family: sans-serif;*/
-/*}*/
-
-/* styling the button*/
 .reg-btn {
   padding: 20px 20px;
   display: inline-block;
@@ -365,7 +321,7 @@ h4 {
   font-size: 3em;
   overflow: hidden;
   border: 3px solid #44ece8;
-  border-radius: 10%;
+  border-radius: 20%;
   justify-content: center;
   transition: 0.5s;
 }
